fix close tab button not appearing in FF
- prevent user from copying asterisk for .dirty (if not visible)

--- a/client/assets/styles/scss/views/views-tabs.scss
+++ b/client/assets/styles/scss/views/views-tabs.scss
@@ -60,6 +60,7 @@
 
   &.dirty .icons-dirty {
     opacity: .5;
+    visibility: visible;
   }
 
   &:last-child {
@@ -77,11 +78,14 @@
 
   .icons-dirty {
     display: inline-block;
+    float: left;
     font-size: 21px;
     line-height: 1.9;
     opacity: 0;
     pointer-events: none;
     position: relative;
+    user-select: none;
+    visibility: hidden;
     z-index: 1;
   }
 
